fix(AVO-3206): fix double click overflow buttons on assignments overview
https://meemoo.atlassian.net/browse/AVO-3206

--- a/src/assignment/views/AssignmentOverview.scss
+++ b/src/assignment/views/AssignmentOverview.scss
@@ -15,6 +15,10 @@
 				}
 			}
 		}
+
+		.c-assignment-overview__actions {
+			margin-top: $g-spacer-unit;
+		}
 	}
 
 	&__header-toolbar {
